--- a/README
+++ b/README
@@ -1,34 +1,34 @@
-0.  Make sure you have installed VirtualBox and Vagrant.
-
-
-1.  Make sure your computer (which hosts VMs) connects to the Internet.
+1.  Make sure you have installed VirtualBox and Vagrant.
+    Make sure your computer (which hosts VMs) connects to the Internet.
 
 
 2.  Open two terminals, one for the server:
 
         --- IN TERMINAL #1 ---
-        $ cd openvpn-server
+        $ cd server
+        $ vagrant up
+        $ vagrant ssh
 
     and the other for the client:
 
         --- IN TERMINAL #2 ---
-        $ cd openvpn-client
-
-
-3.  Run `vagrant up && vagrant ssh` in each of the terminal.
-    Change to the root shell using `sudo su -`.
-    Have terminal multiplexing with `tmux`.
-
-        --- IN TERMINAL #1 ---
+        $ cd client
         $ vagrant up
         $ vagrant ssh
+
+    Command `vagrant up` is to set up the VMs.
+    Command `vagrant ssh` is to SSH into the VMs.
+
+
+3.  Change to the root shell using `sudo su -`.
+    You can choose to have multiplexed multiple terminals with `tmux`.
+
+        --- IN TERMINAL #1 ---
         openvpn-server$ sudo su -
         openvpn-server# tmux a || tmux
         openvpn-server#
 
         --- IN TERMINAL #2 ---
-        $ vagrant up
-        $ vagrant ssh
         openvpn-client$ sudo su -
         openvpn-client# tmux a || tmux
         openvpn-client#
